# revere

./: Cargo.toml  Makefile  README.md  config.template.toml
src/: config.rs  error.rs  main.rs  notification.rs  window.rs
