[package]
authors = ["Antonio Hickey <contact@antoniohickey.com>"]
edition = "2021"
name = "revere"
version = "0.1.0"
repository = "https://github.com/antonio-hickey/revere"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
dbus-tokio = "0.7.6"
tokio = { version = "1.33.0", features = ["full"] }
