[package]
authors = ["Antonio Hickey <contact@antoniohickey.com>"]
edition = "2021"
name = "revere"
version = "0.1.0"
repository = "https://github.com/antonio-hickey/revere"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
wayland-client = "0.28"
wayland-protocols = { version = "0.28", features = ["unstable_protocols"] }
smithay-client-toolkit = "0.15"
cairo-rs = "0.14"
